Quartz sync: Jan 29, 2024, 4:15 PM

--- a/quartz/styles/callouts.scss
+++ b/quartz/styles/callouts.scss
@@ -70,6 +70,18 @@
     --bg: #7a43b510;
   }
 
+  &[data-callout="application"] {
+    --color: #c1efc1;
+    --border: #c1efc144;
+    --bg: #c1efc110;
+  }
+
+  &[data-callout="def"] {
+    --color: #a01e28;
+    --border: #a01e2866;
+    --bg: #a01e2811;
+  }
+
   &[data-callout="quote"] {
     --color: var(--secondary);
     --border: var(--lightgray);
