Further css customization

--- a/quartz/styles/custom.scss
+++ b/quartz/styles/custom.scss
@@ -15,6 +15,13 @@
     --callout-icon: lucide-book;
 }
 
+.article-title {
+    font-weight: bold;
+    text-decoration: underline;
+    color: #3aaa74;  
+    font-size: xx-large;
+}
+
 article {
     :is(h1) {
         color: #4ca6e6;  
